# openenv_hack

./: .dockerignore  .gitignore  .hfignore  Dockerfile  README.md  __init__.py  _http_test_server.py  client.py  dpo_dataset.jsonl  export_dpo.py  inference.py  models.py  openenv.yaml  pyproject.toml  sample_trajectory.json  test_api.py  test_http_reset.py  test_local_env.py  test_task3.py  test_ws.py  validate-submission.sh  visualizer.py
results/: gemini-3.1-flash-lite-preview_run_20260402_182735.json  gemini-3.1-flash-lite-preview_run_20260402_190026.json
server/: __init__.py  app.py  support_env_environment.py
