# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "support_env"
version = "0.1.0"
description = "ComplianceGuard Support Triage OpenEnv"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "openenv",
    "openenv-core[core]>=0.2.1",
    "fastmcp",
    "pydantic",
    "openai",
    "httpx",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]
# Dashboard only — not installed in Docker/HF Space (keeps image small, faster unpack on Windows).
viz = [
    "streamlit",
    "pandas",
]

[project.scripts]
# Server entry point - enables running via: uv run --project . server
# or: python -m support_env.server.app
server = "support_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["support_env", "support_env.server"]
package-dir = { "support_env" = ".", "support_env.server" = "server" }